fix(TOC):fix alignement of TOC on smaller screens

--- a/css/theme.css
+++ b/css/theme.css
@@ -40,6 +40,8 @@ code[class*="language-"] {
 }
 
 pre {
+  margin-left: -0.8em;
+  margin-right: -0.8em;
   padding: 0.6em 0.8em;
   position: relative;
 }
